@@ -9,49 +9,49 @@ class RlsBBNavigation(DDLScraperNavigation):
 	# dictionary 'feeds' stores the links for all categories
 	#===============================================================================
 	feeds = {};
-	feeds['all']			= "http://www.rlsbb.me"
-	feeds['apps']			= "http://www.rlsbb.me/category/applications"
-	feeds['apps_android']	= "http://www.rlsbb.me/category/applications/android"
-	feeds['apps_ios']		= "http://www.rlsbb.me/category/applications/ios"
-	feeds['apps_mac']		= "http://www.rlsbb.me/category/applications/mac"
-	feeds['apps_windows']	= "http://www.rlsbb.me/category/applications/windows"
-	feeds['ebooks']			= "http://www.rlsbb.me/category/ebooks-magazines"
-	feeds['games']			= "http://www.rlsbb.me/category/games"
-	feeds['games_android']	= "http://www.rlsbb.me/category/games/android-games"
-	feeds['games_ios']		= "http://www.rlsbb.me/category/games/ios-games"
-	feeds['games_mac']		= "http://www.rlsbb.me/category/games/mac-games"
-	feeds['games_pc']		= "http://www.rlsbb.me/category/games/pc"
-	feeds['games_ps3']		= "http://www.rlsbb.me/category/games/ps3"
-	feeds['games_psp']		= "http://www.rlsbb.me/category/games/psp"
-	feeds['games_wii']		= "http://www.rlsbb.me/category/games/wii"
-	feeds['games_xbox360']	= "http://www.rlsbb.me/category/games/xbox360"
-	feeds['movies']			= "http://www.rlsbb.me/category/movies"
-	feeds['movies_1080p']	= "http://www.rlsbb.me/category/movies/1080p-movie"
-	feeds['movies_720p']	= "http://www.rlsbb.me/category/movies/720p-movie"
-	feeds['movies_bdrip']	= "http://www.rlsbb.me/category/movies/bdrip-movies"
-	feeds['movies_cam']		= "http://www.rlsbb.me/category/movies/cam-movies"
-	feeds['movies_dvdr']	= "http://www.rlsbb.me/category/movies/dvd-r"
-	feeds['movies_dvdrip']	= "http://www.rlsbb.me/category/movies/dvdrip-movies"
-	feeds['movies_dvdscr']	= "http://www.rlsbb.me/category/movies/dvdscr"
-	feeds['movies_hdtv']	= "http://www.rlsbb.me/category/movies/hdtv"
-	feeds['movies_old']		= "http://www.rlsbb.me/category/movies/old-movie"
-	feeds['movies_ppvrip']	= "http://www.rlsbb.me/category/movies/ppvrip"
-	feeds['movies_r5']		= "http://www.rlsbb.me/category/movies/r5-movies"
-	feeds['movies_scr']		= "http://www.rlsbb.me/category/movies/scr"
-	feeds['movies_ts']		= "http://www.rlsbb.me/category/movies/telesync"
-	feeds['movies_tvrip']	= "http://www.rlsbb.me/category/movies/tvrip"
-	feeds['movies_webrip']	= "http://www.rlsbb.me/category/movies/webrip"
-	feeds['music']			= "http://www.rlsbb.me/category/music"
-	feeds['music_album']	= "http://www.rlsbb.me/category/music/album"
-	feeds['music_itunes']	= "http://www.rlsbb.me/category/music/itunes-music"
-	feeds['music_video']	= "http://www.rlsbb.me/category/music/music-video"
-	feeds['music_singles']	= "http://www.rlsbb.me/category/music/singleseps"
-	feeds['offtopic']		= "http://www.rlsbb.me/category/offtopic"
-	feeds['tutorials']		= "http://www.rlsbb.me/category/tutorials"
-	feeds['tvshows']		= "http://www.rlsbb.me/category/tv-shows"
-	feeds['tvshows_packs']	= "http://www.rlsbb.me/category/tv-shows/tv-packs"
-	feeds['uncategorized']	= "http://www.rlsbb.me/category/uncategorized"
-	feeds['search']			= "http://www.rlsbb.me/?s="
+	feeds['all']			= "http://www.rlsbb.com"
+	feeds['apps']			= "http://www.rlsbb.com/category/applications"
+	feeds['apps_android']	= "http://www.rlsbb.com/category/applications/android"
+	feeds['apps_ios']		= "http://www.rlsbb.com/category/applications/ios"
+	feeds['apps_mac']		= "http://www.rlsbb.com/category/applications/mac"
+	feeds['apps_windows']	= "http://www.rlsbb.com/category/applications/windows"
+	feeds['ebooks']			= "http://www.rlsbb.com/category/ebooks-magazines"
+	feeds['games']			= "http://www.rlsbb.com/category/games"
+	feeds['games_android']	= "http://www.rlsbb.com/category/games/android-games"
+	feeds['games_ios']		= "http://www.rlsbb.com/category/games/ios-games"
+	feeds['games_mac']		= "http://www.rlsbb.com/category/games/mac-games"
+	feeds['games_pc']		= "http://www.rlsbb.com/category/games/pc"
+	feeds['games_ps3']		= "http://www.rlsbb.com/category/games/ps3"
+	feeds['games_psp']		= "http://www.rlsbb.com/category/games/psp"
+	feeds['games_wii']		= "http://www.rlsbb.com/category/games/wii"
+	feeds['games_xbox360']	= "http://www.rlsbb.com/category/games/xbox360"
+	feeds['movies']			= "http://www.rlsbb.com/category/movies"
+	feeds['movies_1080p']	= "http://www.rlsbb.com/category/movies/1080p-movie"
+	feeds['movies_720p']	= "http://www.rlsbb.com/category/movies/720p-movie"
+	feeds['movies_bdrip']	= "http://www.rlsbb.com/category/movies/bdrip-movies"
+	feeds['movies_cam']		= "http://www.rlsbb.com/category/movies/cam-movies"
+	feeds['movies_dvdr']	= "http://www.rlsbb.com/category/movies/dvd-r"
+	feeds['movies_dvdrip']	= "http://www.rlsbb.com/category/movies/dvdrip-movies"
+	feeds['movies_dvdscr']	= "http://www.rlsbb.com/category/movies/dvdscr"
+	feeds['movies_hdtv']	= "http://www.rlsbb.com/category/movies/hdtv"
+	feeds['movies_old']		= "http://www.rlsbb.com/category/movies/old-movie"
+	feeds['movies_ppvrip']	= "http://www.rlsbb.com/category/movies/ppvrip"
+	feeds['movies_r5']		= "http://www.rlsbb.com/category/movies/r5-movies"
+	feeds['movies_scr']		= "http://www.rlsbb.com/category/movies/scr"
+	feeds['movies_ts']		= "http://www.rlsbb.com/category/movies/telesync"
+	feeds['movies_tvrip']	= "http://www.rlsbb.com/category/movies/tvrip"
+	feeds['movies_webrip']	= "http://www.rlsbb.com/category/movies/webrip"
+	feeds['music']			= "http://www.rlsbb.com/category/music"
+	feeds['music_album']	= "http://www.rlsbb.com/category/music/album"
+	feeds['music_itunes']	= "http://www.rlsbb.com/category/music/itunes-music"
+	feeds['music_video']	= "http://www.rlsbb.com/category/music/music-video"
+	feeds['music_singles']	= "http://www.rlsbb.com/category/music/singleseps"
+	feeds['offtopic']		= "http://www.rlsbb.com/category/offtopic"
+	feeds['tutorials']		= "http://www.rlsbb.com/category/tutorials"
+	feeds['tvshows']		= "http://www.rlsbb.com/category/tv-shows"
+	feeds['tvshows_packs']	= "http://www.rlsbb.com/category/tv-shows/tv-packs"
+	feeds['uncategorized']	= "http://www.rlsbb.com/category/uncategorized"
+	feeds['search']			= "http://www.rlsbb.com/?s="
 
 	# tuple with all menu items
 	#	label							,path							, thumbnail						feed
